--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="inner">
 			<div class="offer">
 				<div class="inner">
-					<span>SERVICEPRICE. ACCOUNT. Доступ до EXPIRE-DATE.</span>
+					<span>SERVICEPRICE.ACCOUNT. Доступ до EXPIRE-DATE.</span>
 				</div>
 			</div>
 			<div class="header">
@@ -84,42 +84,12 @@
 
 			<div class="rules" id="footer">
 				<div class="inner blured">
-					<p>Нажатием на кнопку "Узнать" Вы подтверждаете свое согласие с покупкой
-						SERVICENAME и <a href="http://moscow.megafon.ru/download/~federal/oferts/short_numbers/Ofert
-a_Short_numbers_stf.pdf">Условиями предоставления услуги</a>. Услуга предоставляется Контент-провайдером PROVIDER. Информация для
-						абонентов - тел. 8 800 500-25-43 (бесплатно в домашнем регионе) | <a href="ВАША ССЫЛКА НА ПРАВИЛА ПОКУПКИ">Правила покупки поставщика услуг</a> | <a href="#<LK_LINK_URL>">Личный кабинет</a></p>
+					<p>Нажатием на кнопку "Узнать" Вы подтверждаете свое согласие с покупкой SERVICENAME и <a href="http://moscow.megafon.ru/download/~federal/oferts/short_numbers/Oferta_Short_numbers_stf.pdf">Условиями предоставления услуги</a>. Услуга предоставляется Контент-провайдером PROVIDER. Информация для абонентов - тел. 8 800 500-25-43 (бесплатно в домашнем регионе) | <a href="ВАША ССЫЛКА НА ПРАВИЛА ПОКУПКИ">Правила покупки поставщика услуг</a> | <a href="#<LK_LINK_URL>">Личный кабинет</a></p>
 				</div>
 			</div>
 		</div>
 	</div>
 	</div>
-<script type="text/javascript">
-		//<![CDATA[
-		function rsz() {
-				var footer = document['getElementById']('footer');
-				var buttonWrap = document['getElementsByClassName']('btn-wrapper')[0];
-				footer['style']['bottom'] = "auto";
-				footer['style']['top'] = (window['innerHeight'] - footer.offsetHeight) + 'px';
-				if ((window['innerHeight'] > 212) && (window['innerHeight'] < 233)) {
-						buttonWrap['style']['marginTop'] = '-'+ (footer.offsetHeight-55) + 'px';
-				} else { buttonWrap['style']['marginTop'] = 0; }
-
-				document.body.style.height = window.innerHeight + 'px';
-		}
-		setInterval(function() {
-				rsz()
-		}, 100);
-		window['onresize'] = function() {
-				window['scrollTo'](0, 0);
-				setTimeout(function() {
-						rsz()
-				}, 100)
-		};
-		document.addEventListener('touchmove', function(e) {
-				e.preventDefault();
-		}, { passive: false });
-		//]]>
-</script>
 
 </body>
 </html>
